--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Comment me to have the hamburger pushing the canvas
         */
         #c {
-            position: fixed;
+            position: absolute;
             left: 0px;
             top: 0px;
             width: 100%;
@@ -479,8 +479,6 @@
         import * as THREE from 'three'
         import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js'
         import { TransformControls } from 'three/examples/jsm/controls/TransformControls.js'
-        // import { TrackballControls } from 'three/addons/controls/TrackballControls.js'
-        // import { TransformControls } from 'three/addons/controls/TransformControls.js'
         import { Pane } from 'https://cdn.jsdelivr.net/npm/tweakpane@4.0.1/dist/tweakpane.min.js'
 
         function addSetupTo(mesh) {
@@ -902,8 +900,12 @@
         }
 
         function updateSize() {
+            // const width = canvas.offsetWidth
+            // const height = canvas.offsetHeight
+
             const width = window.innerWidth
             const height = window.innerHeight
+
             camera.aspect = width / height
             camera.updateProjectionMatrix()
             renderer.setSize(width, height)
